--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -1,15 +1,8 @@
 #Uncommenting these urls would only enable
 #the power up auto injection and force injection(test case).
-#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
-#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
-
-#Version check for XTRA
-#DISABLE = 0
-#AUTO    = 1
-#XTRA2   = 2
-#XTRA3   = 3
-XTRA_VERSION_CHECK=0
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
 # Error Estimate
 # _SET = 1
@@ -17,7 +10,7 @@ XTRA_VERSION_CHECK=0
 ERR_ESTIMATE=0
 
 #Test
-NTP_SERVER=time.gpsonextra.net
+NTP_SERVER=time.izatcloud.net
 #Asia
 # NTP_SERVER=asia.pool.ntp.org
 #Europe
@@ -37,12 +30,7 @@ INTERMEDIATE_POS=0
 SUPL_VER=0x10000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=0
-
-#Choose PDN for Emergency SUPL
-#1 - Use emergency PDN
-#0 - Use regular SUPL PDN for Emergency SUPL
-USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
+SUPL_ES=1
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -69,14 +57,6 @@ CAPABILITIES=0x33
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
 
-# Bitmask of slots that are available
-# for write/install to, where 1s indicate writable,
-# and the default value is 0 where no slots
-# are writable. For example, AGPS_CERT_WRITABLE_MASK
-# of b1000001010 makes 3 slots available
-# and the remaining 7 slots unwritable.
-#AGPS_CERT_WRITABLE_MASK=0
-
 ####################################
 #  LTE Positioning Profile Settings
 ####################################
@@ -84,13 +64,13 @@ CAPABILITIES=0x33
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 0
+LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
 
 ################################
 # EXTRA SETTINGS
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
-NMEA_PROVIDER=0
+NMEA_PROVIDER=1
 
 # Mark if it is a SGLTE target (1=SGLTE, 0=nonSGLTE)
 SGLTE_TARGET=0
@@ -101,4 +81,4 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0x0
