serrano-common: Advertise support for extended length nfc
* Value obtained from decompiling stock NfcNci.apk

Change-Id: I3f2ce369fb72880d5b91cb15a7255cd845925f86

--- a/nfc/libnfc-brcm.conf
+++ b/nfc/libnfc-brcm.conf
@@ -358,3 +358,8 @@ DEFAULT_ISODEP_ROUTE=0xF3
 # Configure the default "off-host" AID route.  The default is 0xF4
 DEFAULT_OFFHOST_ROUTE=0xF3
 
+###############################################################################
+# Set max transceive length for IsoDep frames
+# Standard      0x105 (261)
+# Extended      0xFEFF (65279)
+ISO_DEP_MAX_TRANSCEIVE=0xFEFF
