--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -31,7 +31,7 @@ import init.target.rc
 import init.carrier.rc
 
 on init
-    export LD_SHIM_LIBS "/system/vendor/bin/mm-qcamera-daemon|libshim_camera.so"
+    export LD_SHIM_LIBS "/system/vendor/bin/mm-qcamera-daemon|libshim_camera.so:/system/vendor/lib/libsec-ril.so|libshim_atomic.so:/system/vendor/lib/libsec-ril-dsds.so|libshim_atomic.so"
 
     # Set permissions for persist partition
     mkdir /persist 0771 system system
