--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -95,9 +95,9 @@
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_vidc_enc_sec     0660   system     audio
-/dev/msm_rotator          0660   system     graphics
+/dev/msm_rotator          0660   system     system
 /dev/hw_random            0660   system     system
-/dev/graphics/*           0660   system     graphics
+/dev/graphics/*           0660   system     system
 /dev/tun                  0660   system     vpn
 
 # permissions for audio
