--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -90,11 +90,11 @@
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
 /dev/mercury0             0660   system     camera
-/dev/msm_vidc_reg         0660   system     audio
-/dev/msm_vidc_dec         0660   system     audio
-/dev/msm_vidc_dec_sec     0660   system     audio
-/dev/msm_vidc_enc         0660   system     audio
-/dev/msm_vidc_enc_sec     0660   system     audio
+/dev/msm_vidc_reg         0660   system     camera
+/dev/msm_vidc_dec         0660   system     camera
+/dev/msm_vidc_dec_sec     0660   system     camera
+/dev/msm_vidc_enc         0660   system     camera
+/dev/msm_vidc_enc_sec     0660   system     camera
 /dev/msm_rotator          0660   system     system
 /dev/hw_random            0660   system     system
 /dev/graphics/*           0660   system     system
