rootdir: Add system group to qcom-audio service
Change-Id: I076f4e72710ef4fda846427cd1625927fbbb151e

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -242,6 +242,7 @@ service fm_dl /system/vendor/bin/init.qcom.fm.sh
 service qcom-audio /system/vendor/bin/init.qcom.audio.sh
    class late_start
    user root
+   group system
    disabled
    oneshot
 
