rootdir: Move qmuxd service to user root
Change-Id: Ia5ef78c5cb495cf639365702dae23f7ff333c25d

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -206,7 +206,7 @@ on property:bluetooth.hciattach=false
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /vendor/bin/qmuxd
     class main
-    user radio
+    user root
     group radio audio bluetooth gps diag wakelock
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
