--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -207,7 +207,7 @@ on property:vendor.bluetooth.hciattach=false
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /vendor/bin/qmuxd
     class main
-    user radio
+    user root
     group radio audio bluetooth gps diag wakelock
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
